[3.7] bpo-37219: Remove erroneous optimization for differencing an empty set (GH-13965) #13967